k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prayag-app
  labels:
    name: prayag-app
