k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prayag-app-service
  namespace: prayag-app
  labels:
    app: prayag-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: prayag-app
